--- a/src/scss/accountlogin.scss
+++ b/src/scss/accountlogin.scss
@@ -30,7 +30,7 @@ $color:#278B81;
     color: white;
     width: 20vh;
     bottom: 20px;
-    left:  20px;
+    left:20px
   }
     .am-list-item{
       background: transparent;
@@ -50,7 +50,7 @@ $color:#278B81;
     }
 
 
-  .registerBtn{
+  .loginBtn{
     background: transparent;
     position: absolute !important;
     border: .5px solid white !important;
