--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -25,7 +25,7 @@ $color:#278B81;
     border-radius: 20px;
     margin: 0 auto;
   }
-  .loginBtn{
+  .accountloginBtn{
     color: $color;
   }
   .registerBtn{
