--- a/dev/scss/main.css
+++ b/dev/scss/main.css
@@ -7660,9 +7660,7 @@ a {
 .am-wingblank.am-wingblank-lg {
   margin-left: 15px;
   margin-right: 15px;
-}body {
-  font-family: 'Microsoft YaHei'; }
-.container {
+}.container {
   background: -webkit-linear-gradient(#278B81, #009860);
   background: -o-linear-gradient(#278B81, #009860);
   background: -moz-linear-gradient(#278B81, #009860);
@@ -7683,7 +7681,7 @@ a {
     width: 45vh;
     border-radius: 20px;
     margin: 0 auto; }
-  .container .loginBtn {
+  .container .accountloginBtn {
     color: #278B81; }
   .container .registerBtn {
     background: transparent;
@@ -7717,8 +7715,8 @@ a {
     position: absolute !important;
     color: white;
     width: 20vh;
-    bottom: 10vh;
-    left: 5vh; }
+    bottom: 20px;
+    left: 20px; }
   .containerregister .am-list-item {
     background: transparent;
     padding-right: 15px; }
@@ -7728,6 +7726,8 @@ a {
         color: #EAFEFF; }
       .containerregister .am-list-item .am-list-line input {
         color: white; }
+    .containerregister .am-list-item .am-radio.am-radio-checked .am-radio-inner:after {
+      border-color: #ddd; }
   .containerregister .registerBtn {
     background: transparent;
     position: absolute !important;
@@ -7736,3 +7736,51 @@ a {
     width: 20vh;
     bottom: 20px;
     right: 20px; }
+.containerregister {
+  background: -webkit-linear-gradient(#278B81, #009860);
+  background: -o-linear-gradient(#278B81, #009860);
+  background: -moz-linear-gradient(#278B81, #009860);
+  background: linear-gradient(#278B81, #009860);
+  min-height: 100vh; }
+  .containerregister img {
+    margin: 26vh auto 24vh auto;
+    width: 100%; }
+  .containerregister .am-navbar {
+    background-color: transparent; }
+    .containerregister .am-navbar .am-navbar-left {
+      color: #7ABEBF; }
+    .containerregister .am-navbar .am-navbar-right {
+      color: #EAFEFF; }
+  .containerregister .ptitle {
+    text-align: left;
+    font-size: 25px;
+    text-indent: 20px;
+    color: white;
+    margin-bottom: 40px; }
+  .containerregister .pfooter {
+    position: absolute !important;
+    color: white;
+    width: 20vh;
+    bottom: 20px;
+    left: 20px; }
+  .containerregister .am-list-item {
+    background: transparent;
+    padding-right: 15px; }
+    .containerregister .am-list-item .am-list-line {
+      border-bottom: 1PX solid #ddd; }
+      .containerregister .am-list-item .am-list-line .am-list-content {
+        color: #EAFEFF; }
+      .containerregister .am-list-item .am-list-line input {
+        color: white; }
+    .containerregister .am-list-item .am-radio.am-radio-checked .am-radio-inner:after {
+      border-color: #ddd; }
+  .containerregister .loginBtn {
+    background: transparent;
+    position: absolute !important;
+    border: .5px solid white !important;
+    color: white;
+    width: 20vh;
+    bottom: 20px;
+    right: 20px; }
+body {
+  font-family: 'Microsoft YaHei'; }
