--- a/src/scss/info.scss
+++ b/src/scss/info.scss
@@ -16,4 +16,8 @@ $color:#278B81;
     width: 60%!important;
     height: 80%;
   }
+  .am-button{
+    width: 150px;
+    margin: 40px auto;
+  }
 }
