--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,3 +10,8 @@ body {
     padding-right: 15px;
     text-align: center;
 }
+.stick-footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
