--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,7 +11,7 @@ body {
     text-align: center;
 }
 .stick-footer{
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
 }
